Added stationary spectra

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /.venv
-/Fibre Data Files
+
+/Fibre Data Files/17.06 strain array 07
+/Fibre Data Files/FBGs 10.06
+/Fibre Data Files/23.06 files
+/Fibre Data Files/Time Dependent Spectra
 /__pycache__
